[LongNB] shell code