@@ -29,7 +29,7 @@ public class SQLiteInstance {
     /**
      * Create table
      * @param tableName name of table
-     * @param columns columns of tablw
+     * @param columns columns of table
      */
     public void createTable(String tableName, String... columns) {
         try {
@@ -95,7 +95,7 @@ public class SQLiteInstance {
     }
 
     /**
-     * function to add row to table in SQLite)
+     * function to add row to table in SQLite
      * @param tableName table to insert
      * @param values table properties
      */
@@ -156,11 +156,13 @@ public class SQLiteInstance {
     public List<List<Object>> findNotCondition(String tableName, String... columns) {
         List<List<Object>> values = new ArrayList<>();
         List<String> columnsList = Arrays.asList(columns);
-        StringBuilder sql = new StringBuilder("SELECT " + columnsList.getFirst());
+
+        StringBuilder sql = new StringBuilder("SELECT ").append(columnsList.get(0));
         for (int i = 1; i < columns.length; i++) {
             sql.append(", ").append(columns[i]);
         }
         sql.append(" FROM ").append(tableName);
+
         try (PreparedStatement stmt = connection.prepareStatement(sql.toString())) {
             ResultSet rs = stmt.executeQuery();
             while (rs.next()) {
@@ -175,6 +177,7 @@ public class SQLiteInstance {
         }
         return values;
     }
+
 
     /**
      * find function for important query
@@ -202,6 +205,16 @@ public class SQLiteInstance {
         }
         return values;
     }
+
+    public void executeUpdate(String sql, DocumentManagement.PreparedStatementSetter setter) {
+        try (PreparedStatement stmt = connection.prepareStatement(sql)) {
+            setter.setValues(stmt);
+            stmt.executeUpdate();
+        } catch (SQLException e) {
+            e.printStackTrace();
+        }
+    }
+
     public ResultSet query(String sql, String... params) {
         try (PreparedStatement preparedStatement = connection.prepareStatement(sql))
         {
